test/replaceIndexBad2.slq

def main(){
	xs:=vector(2,0);
	x:=H(0:ğ”¹);
	xs[X(x)]:=X(xs[X(x)]); // error
	return xs;
}
